--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -2,6 +2,15 @@
 % Encoding: UTF8
 
 
+@ARTICLE{Otsu1979,
+author={Otsu, Nobuyuki},
+title={Threshold selection method from gray-level histograms.},
+journal={IEEE Trans Syst Man Cybern},
+year={1979},
+volume={SMC-9},
+number={1},
+pages={62-66},
+}
 
 @article{Beaulieu2002,
 abstract = {Anisotropic water diffusion in neural fibres such as nerve, white matter in spinal cord, or white matter in brain forms the basis for the utilization of diffusion tensor imaging (DTI) to track fibre pathways. The fact that water diffusion is sensitive to the underlying tissue microstructure provides a unique method of assessing the orientation and integrity of these neural fibres, which may be useful in assessing a number of neurological disorders. The purpose of this review is to characterize the relationship of nuclear magnetic resonance measurements of water diffusion and its anisotropy (i.e. directional dependence) with the underlying microstructure of neural fibres. The emphasis of the review will be on model neurological systems both in vitro and in vivo. A systematic discussion of the possible sources of anisotropy and their evaluation will be presented followed by an overview of various studies of restricted diffusion and compartmentation as they relate to anisotropy. Pertinent pathological models, developmental studies and theoretical analyses provide further insight into the basis of anisotropic diffusion and its potential utility in the nervous system.},
