Added an introduction to the tracking section.

--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -1,6 +1,39 @@
 % This file was created with JabRef 2.3.1.
 % Encoding: UTF8
 
+@article{VanEssen2013,
+abstract = {The Human Connectome Project consortium led by Washington University, University of Minnesota, and Oxford University is undertaking a systematic effort to map macroscopic human brain circuits and their relationship to behavior in a large population of healthy adults. This overview article focuses on progress made during the first half of the 5-year project in refining the methods for data acquisition and analysis. Preliminary analyses based on a finalized set of acquisition and preprocessing protocols demonstrate the exceptionally high quality of the data from each modality. The first quarterly release of imaging and behavioral data via the ConnectomeDB database demonstrates the commitment to making HCP datasets freely accessible. Altogether, the progress to date provides grounds for optimism that the HCP datasets and associated methods and software will become increasingly valuable resources for characterizing human brain connectivity and function, their relationship to behavior, and their heritability and genetic underpinnings.},
+author = {{Van Essen}, David C and Smith, Stephen M and Barch, Deanna M and Behrens, Timothy E J and Yacoub, Essa and Ugurbil, Kamil},
+doi = {10.1016/j.neuroimage.2013.05.041},
+issn = {1095-9572},
+journal = {NeuroImage},
+month = oct,
+pages = {62--79},
+pmid = {23684880},
+publisher = {Elsevier Inc.},
+title = {{The WU-Minn Human Connectome Project: An overview.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/23684880},
+volume = {80},
+year = {2013}
+}
+
+@article{Sporns2005,
+abstract = {The connection matrix of the human brain (the human "connectome") represents an indispensable foundation for basic and applied neurobiological research. However, the network of anatomical connections linking the neuronal elements of the human brain is still largely unknown. While some databases or collations of large-scale anatomical connection patterns exist for other mammalian species, there is currently no connection matrix of the human brain, nor is there a coordinated research effort to collect, archive, and disseminate this important information. We propose a research strategy to achieve this goal, and discuss its potential impact.},
+author = {Sporns, Olaf and Tononi, Giulio and K\"{o}tter, Rolf},
+doi = {10.1371/journal.pcbi.0010042},
+issn = {1553-7358},
+journal = {PLoS computational biology},
+keywords = {Animals,Brain,Brain: anatomy \& histology,Brain: cytology,Brain: metabolism,Humans,Nerve Net,Neurons,Neurons: metabolism,Synapses,Synapses: metabolism},
+month = sep,
+number = {4},
+pages = {e42},
+pmid = {16201007},
+title = {{The human connectome: A structural description of the human brain.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1239902\&tool=pmcentrez\&rendertype=abstract},
+volume = {1},
+year = {2005}
+}
+
 
 @ARTICLE{Otsu1979,
 author={Otsu, Nobuyuki},
