--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -969,6 +969,40 @@ odf = sh_to_sf(odf_sh, sphere, sh_order=8)
 \end{python}
 
 \section{Fiber tracking}\label{fiber_tracking}
+
+One of the tantalizing prospects of DWI is the promise that combining
+information about the local microstructure across different voxels may provide
+information about large-scale organization of the brain. In particular,
+researchers have been trying to use various algorithms to track along the
+presumed fiber populations to make inferences about axonal connections between
+different parts of the gray matter. The connection matrix that results from an
+exhaustive connectivity analysis of all parts of the cerebral cortex is
+sometimes referred to as a ``connectome`` \cite{sporns2005} and understanding
+the structure and function of the connectome is a central goal of modern
+neuroscience. This premise has led to major investment in data-collection
+projects aimed at characterizing the connectome, based on DWI, as well as fMRI
+measurements \cite{VanEssen2013}.
+
+Tracking algorithms, used to infer these connections divide into to major
+classes. The first class is deterministic. It uses the information about the
+directions of diffusion. Some of the early deterministic algorithms used the
+primary diffusion direction of the DTI model as an indication of the direction
+of the major fiber population in every voxel and track along the streamlines
+that are implied by these principal diffusion directions \citep{Mori1999,
+  conturo-lori-etal:99, basser-pajevic-etal:00} . However, it is
+now widely recognized that in regions of crossing fibers, the primary diffusion
+direction may not coincide with the direction of any of the local fiber
+populations. More modern algorithms (see below) take this into account.  
+
+The other class of algorithms is probabilistic, in that it considers the local
+information in each voxel to represent a distribution . In these algorithms, a
+trajectory of fibers in every location is sampled from this distribution. The
+algorithm may therefore give different sets of `fibers` on different realizations
+of the algorithm. 
+
+Dipy implements both deterministic and probabilistic tracking algorithms,
+described in detail below.
+
 \subsection{Deterministic}
 
 \subsubsection{EuDX}
