Explain the acronym.

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -980,8 +980,8 @@ exhaustive connectivity analysis of all parts of the cerebral cortex is
 sometimes referred to as a ``connectome`` \cite{sporns2005} and understanding
 the structure and function of the connectome is a central goal of modern
 neuroscience. This premise has led to major investment in data-collection
-projects aimed at characterizing the connectome, based on DWI, as well as fMRI
-measurements \cite{VanEssen2013}.
+projects aimed at characterizing the connectome, based on DWI, as well as
+functional MRI (fMRI) measurements \cite{VanEssen2013}.
 
 Tracking algorithms, used to infer these connections divide into to major
 classes. The first class is deterministic. It uses the information about the
