OK - reading on I realize this was not a good comment.

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -1075,8 +1075,8 @@ from EuDX.
 \section{Post-tracking}\label{post_tracking}
 
 In the following sections we describe some of the tools available for processing
-streamlines after these have been created. [NEEDS AN EXPLANATION WHY YOU WOULD
-WANT TO DO THIS...]
+streamlines after these have been created. 
+
 \subsection{Streamline clustering}\label{quickbundles}
 Depending on the initial number of seeds and other tracking parameters
 fiber tracking algorithms can generate a great number of densely packed
