More suggestions/citations. Added a few words to Conclusions (WIP).

--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -1,5 +1,21 @@
 % This file was created with JabRef 2.3.1.
 % Encoding: UTF8
+@article{Garyfallidis2012,
+abstract = {Diffusion MR data sets produce large numbers of streamlines which are hard to visualize, interact with, and interpret in a clinically acceptable time scale, despite numerous proposed approaches. As a solution we present a simple, compact, tailor-made clustering algorithm, QuickBundles (QB), that overcomes the complexity of these large data sets and provides informative clusters in seconds. Each QB cluster can be represented by a single centroid streamline; collectively these centroid streamlines can be taken as an effective representation of the tractography. We provide a number of tests to show how the QB reduction has good consistency and robustness. We show how the QB reduction can help in the search for similarities across several subjects.},
+author = {Garyfallidis, Eleftherios and Brett, Matthew and Correia, Marta Morgado and Williams, Guy B and Nimmo-Smith, Ian},
+doi = {10.3389/fnins.2012.00175},
+issn = {1662-453X},
+journal = {Frontiers in neuroscience},
+keywords = {clustering algorithms,diffusion mri,dimensionality reduction,dti,fiber clustering,tractography,tractography, diffusion MRI, fiber clustering, white matter segmentation, dimensionality reduction, clustering algorithms, DTI,white matter segmentation},
+month = jan,
+number = {December},
+pages = {175},
+pmid = {23248578},
+title = {{QuickBundles, a Method for Tractography Simplification.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3518823\&tool=pmcentrez\&rendertype=abstract},
+volume = {6},
+year = {2012}
+}
 
 @article{VanEssen2013,
 abstract = {The Human Connectome Project consortium led by Washington University, University of Minnesota, and Oxford University is undertaking a systematic effort to map macroscopic human brain circuits and their relationship to behavior in a large population of healthy adults. This overview article focuses on progress made during the first half of the 5-year project in refining the methods for data acquisition and analysis. Preliminary analyses based on a finalized set of acquisition and preprocessing protocols demonstrate the exceptionally high quality of the data from each modality. The first quarterly release of imaging and behavioral data via the ConnectomeDB database demonstrates the commitment to making HCP datasets freely accessible. Altogether, the progress to date provides grounds for optimism that the HCP datasets and associated methods and software will become increasingly valuable resources for characterizing human brain connectivity and function, their relationship to behavior, and their heritability and genetic underpinnings.},
@@ -169,6 +185,8 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/21219189},
 volume = {7},
 year = {2011}
 }
+
+
 
 @inproceedings{GaryfallidisISBI2013a,
   address = {San Francisco, USA},
