Add figure with contributor stats. Add some text in discussion.

--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -1205,25 +1205,36 @@ different software projects comprising Nipy, are all developed under the
 umbrella of one github organization (\url{github.com/nipy}) and the central
 Dipy github repository is managed under this organization
 (\url{github.com/nipy/dipy}).  The community provides support for the use and
-development of these software tools through a mailing list (\url{XXX}), and
-this is also a good place to discuss other Python-/neuroimaging-related issues
-(e.g.: XXX [ADD the permutation testing example]).
+development of these software tools through a mailing list
+(\url{http://mail.scipy.org/mailman/listinfo/nipy-devel}), and this mailing
+list is also a good place to discuss other Python-/neuroimaging-related issues.
 
 Github is widely recognized as a factor in lowering the barriers on
-participation in open-source software development [REF]. In combination with
-the principles of the Nipy community this has led to a vibrant and diverse
+participation in open-source software development [REF?]. In combination with
+the principles of the Nipy community, this has led to a vibrant and diverse
 developer community. In contrast to many other software projects in
 neuroimaging, Dipy is not based on the work of one lab, or one institution. Though
 many of the contributions are made by a few core contributors, there are many
-contributors to the code-base and the number of contributors is growing from
-release to release. 
+contributors to the code-base and the number of contributors has been growing
+dramatically after the April 2013 release of version 0.6 of the software
+~\ref{Fig:gh_stats}, with contributors based in at least 6 different academic
+institutions in 4 countries (Canada, UK, USA, and South-Africa).
 
-One major source of support for this community comes in the form of the
+\begin{figure}
+\centering{}
+\includegraphics[scale=0.37]{Figures/fig-gh.eps}
+\caption{Participation in the Dipy github repository. The cumulative number of
+  unique contributors has been extracted from the git log and tallied. Many
+  new contributors have joined the project after the 0.6 release\label{Fig:gh_stats}}
+\end{figure}
+
+An additional major source of support for this community comes in the form of the
 Neurodebian distribution \citep{Halchenko2012}. Neurodebian is a platform for
 maintenance and deployment of software for the analysis of neuroscience data,
 based on free open source software (FOSS) practices. It currenly supports the
 distribution of XXX different software libraries , including many widely used
 software libraries (e.g FSL) and all of the constituents of the nipy community.
+
 
 \section*{Acknowledgments}
 
