--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -1,65 +1,68 @@
 % This file was created with JabRef 2.3.1.
 % Encoding: UTF8
-@article{Garyfallidis2012,
-abstract = {Diffusion MR data sets produce large numbers of streamlines which are hard to visualize, interact with, and interpret in a clinically acceptable time scale, despite numerous proposed approaches. As a solution we present a simple, compact, tailor-made clustering algorithm, QuickBundles (QB), that overcomes the complexity of these large data sets and provides informative clusters in seconds. Each QB cluster can be represented by a single centroid streamline; collectively these centroid streamlines can be taken as an effective representation of the tractography. We provide a number of tests to show how the QB reduction has good consistency and robustness. We show how the QB reduction can help in the search for similarities across several subjects.},
-author = {Garyfallidis, Eleftherios and Brett, Matthew and Correia, Marta Morgado and Williams, Guy B and Nimmo-Smith, Ian},
-doi = {10.3389/fnins.2012.00175},
-issn = {1662-453X},
-journal = {Frontiers in neuroscience},
-keywords = {clustering algorithms,diffusion mri,dimensionality reduction,dti,fiber clustering,tractography,tractography, diffusion MRI, fiber clustering, white matter segmentation, dimensionality reduction, clustering algorithms, DTI,white matter segmentation},
-month = jan,
-number = {December},
-pages = {175},
-pmid = {23248578},
-title = {{QuickBundles, a Method for Tractography Simplification.}},
-url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3518823\&tool=pmcentrez\&rendertype=abstract},
-volume = {6},
-year = {2012}
+
+
+@article{bilgic2012accelerated,
+author = {Bilgic, B. and Setsompop, K. and Cohen-Adad, J. and Yendiki, A. and Wald, L.L. and Adalsteinsson, E.},
+title = {Accelerated diffusion spectrum imaging with compressed sensing using adaptive dictionaries},
+journal = {Magnetic Resonance in Medicine},
+volume = {68},
+number = {6},
+publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+issn = {1522-2594},
+url = {http://dx.doi.org/10.1002/mrm.24505},
+doi = {10.1002/mrm.24505},
+pages = {1747--1754},
+keywords = {diffusion spectrum imaging, compressed sensing, adaptive dictionary},
+year = {2012},
 }
 
-@article{VanEssen2013,
-abstract = {The Human Connectome Project consortium led by Washington University, University of Minnesota, and Oxford University is undertaking a systematic effort to map macroscopic human brain circuits and their relationship to behavior in a large population of healthy adults. This overview article focuses on progress made during the first half of the 5-year project in refining the methods for data acquisition and analysis. Preliminary analyses based on a finalized set of acquisition and preprocessing protocols demonstrate the exceptionally high quality of the data from each modality. The first quarterly release of imaging and behavioral data via the ConnectomeDB database demonstrates the commitment to making HCP datasets freely accessible. Altogether, the progress to date provides grounds for optimism that the HCP datasets and associated methods and software will become increasingly valuable resources for characterizing human brain connectivity and function, their relationship to behavior, and their heritability and genetic underpinnings.},
-author = {{Van Essen}, David C and Smith, Stephen M and Barch, Deanna M and Behrens, Timothy E J and Yacoub, Essa and Ugurbil, Kamil},
-doi = {10.1016/j.neuroimage.2013.05.041},
-issn = {1095-9572},
-journal = {NeuroImage},
-month = oct,
-pages = {62--79},
-pmid = {23684880},
-publisher = {Elsevier Inc.},
-title = {{The WU-Minn Human Connectome Project: An overview.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/23684880},
-volume = {80},
-year = {2013}
-}
-
-@article{Sporns2005,
-abstract = {The connection matrix of the human brain (the human "connectome") represents an indispensable foundation for basic and applied neurobiological research. However, the network of anatomical connections linking the neuronal elements of the human brain is still largely unknown. While some databases or collations of large-scale anatomical connection patterns exist for other mammalian species, there is currently no connection matrix of the human brain, nor is there a coordinated research effort to collect, archive, and disseminate this important information. We propose a research strategy to achieve this goal, and discuss its potential impact.},
-author = {Sporns, Olaf and Tononi, Giulio and K\"{o}tter, Rolf},
-doi = {10.1371/journal.pcbi.0010042},
-issn = {1553-7358},
-journal = {PLoS computational biology},
-keywords = {Animals,Brain,Brain: anatomy \& histology,Brain: cytology,Brain: metabolism,Humans,Nerve Net,Neurons,Neurons: metabolism,Synapses,Synapses: metabolism},
-month = sep,
-number = {4},
-pages = {e42},
-pmid = {16201007},
-title = {{The human connectome: A structural description of the human brain.}},
-url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1239902\&tool=pmcentrez\&rendertype=abstract},
-volume = {1},
-year = {2005}
+@Article{	  menzel-tan-etal:11,
+  author		      = {M.I. Menzel and E.T. Tan and K. Khare and J.I. Sperl and K.F. King and
+				X. Tao and C.J. Hardy and L. Marinelli},
+  title			      = {Accelerated diffusion spectrum imaging in the human brain using compressed sensing},
+  journal		      = {Magnetic Resonance in Medicine},
+  year			      = {2011},
+  volume		      = {66},
+  pages			      = {1226--1233},
+  month			      = nov,
+  topic			      = {misc},
+  owner			      = {smerlet},
+  group			      = {Other},
+  x-editorial-board	      = {yes},
+  x-international-audience    = {yes},
+  doi			      = {10.1002/mrm.23064},
+  x-pays		      = {}
 }
 
 
-@ARTICLE{Otsu1979,
-author={Otsu, Nobuyuki},
-title={Threshold selection method from gray-level histograms.},
-journal={IEEE Trans Syst Man Cybern},
-year={1979},
-volume={SMC-9},
-number={1},
-pages={62-66},
+@article{Setsompop2012569,
+title = "Improving diffusion MRI using simultaneous multi-slice echo planar imaging",
+journal = "NeuroImage",
+volume = "63",
+number = "1",
+pages = "569 - 580",
+year = "2012",
+note = "",
+issn = "1053-8119",
+doi = "10.1016/j.neuroimage.2012.06.033",
+url = "http://www.sciencedirect.com/science/article/pii/S1053811912006477",
+author = "K. Setsompop and J. Cohen-Adad and B.A. Gagoski and T. Raij and A. Yendiki and B. Keil and V.J. Wedeen and L.L. Wald",
+keywords = "Diffusion MRI",
+keywords = "Simultaneous multi-slice",
+keywords = "CAIPIRINHA",
+keywords = "Parallel imaging"
 }
+
+@article{	  gramfort-etal-media:13,
+  author		      = {Gramfort, A. and  Poupon, C. and Descoteaux, M.},
+  title			      = {Denoising and fast diffusion imaging with physically constrained sparse dictionary learning},
+  journal		      = {Medical Image Analysis},
+  year			      = {2013},
+  pages		      = {in press},
+
+}
+
 
 @article{Beaulieu2002,
 abstract = {Anisotropic water diffusion in neural fibres such as nerve, white matter in spinal cord, or white matter in brain forms the basis for the utilization of diffusion tensor imaging (DTI) to track fibre pathways. The fact that water diffusion is sensitive to the underlying tissue microstructure provides a unique method of assessing the orientation and integrity of these neural fibres, which may be useful in assessing a number of neurological disorders. The purpose of this review is to characterize the relationship of nuclear magnetic resonance measurements of water diffusion and its anisotropy (i.e. directional dependence) with the underlying microstructure of neural fibres. The emphasis of the review will be on model neurological systems both in vitro and in vivo. A systematic discussion of the possible sources of anisotropy and their evaluation will be presented followed by an overview of various studies of restricted diffusion and compartmentation as they relate to anisotropy. Pertinent pathological models, developmental studies and theoretical analyses provide further insight into the basis of anisotropic diffusion and its potential utility in the nervous system.},
@@ -186,8 +189,6 @@ volume = {7},
 year = {2011}
 }
 
-
-
 @inproceedings{GaryfallidisISBI2013a,
   address = {San Francisco, USA},
   author = {Garyfallidis, Eleftherios and St-Jean, Samuel and Paquette, Michael and Coupé, Pierrick and Descoteaux, Maxime},
@@ -266,6 +267,24 @@ pmid = {22770597},
 title = {{Super-resolution reconstruction to increase the spatial resolution of diffusion weighted images from orthogonal anisotropic acquisitions.}},
 url = {http://dx.doi.org/10.1016/j.media.2012.05.003},
 volume = {16},
+year = {2012}
+}
+
+@article{garyfallidis-etal:12,
+author = {Garyfallidis, Eleftherios and Brett, Matthew and Correia, Marta Morgado and Williams, Guy B and Nimmo-Smith, Ian},
+doi = {10.3389/fnins.2012.00175},
+issn = {1662-453X},
+journal = {Frontiers in neuroscience},
+keywords = {DTI.,Fiber clustering,White matter Segmentation,clustering algorithms,diffusion MRI,dimensionality reduction,streamline clustering,tractography},
+language = {English},
+month = jan,
+number = {175},
+pages = {1--13},
+pmid = {23248578},
+publisher = {Frontiers},
+title = {{QuickBundles, a Method for Tractography Simplification.}},
+url = {http://www.frontiersin.org/Journal/10.3389/fnins.2012.00175/abstract},
+volume = {6},
 year = {2012}
 }
 
@@ -7003,6 +7022,18 @@ year = {2010}
   timestamp = {2007.12.03}
 }
 
+@article{jones-etal:13,
+author = {Jones, Derek K. and Kn\"{o}sche, Thomas R. and Turner, Robert},
+issn = {10538119},
+journal = {NeuroImage},
+month = jul,
+pages = {239--254},
+title = {{White Matter Integrity, Fiber Count, and Other Fallacies: The Do's and Don'ts of Diffusion MRI}},
+url = {http://dx.doi.org/10.1016/j.neuroimage.2012.06.081},
+volume = {73},
+year = {2013}
+}
+
 @ARTICLE{jones-etal:99,
   author = {D. K. Jones and M. A. Horsfield and A. Simmons},
   title = {Optimal strategies for measuring diffusion in anisotropic systems
@@ -10275,6 +10306,19 @@ year = {1999}
   file = {:schamahmann-wedeen-brain07.pdf:PDF},
   owner = {ripcurl},
   timestamp = {2007.06.19}
+}
+
+@Article{wedeen2005mapping,
+  Author         = {Wedeen, V.J. and Hagmann, P. and Tseng, W.Y.I. and
+                   Reese, T.G. and Weisskoff, R.M.},
+  Title          = {Mapping complex tissue architecture with diffusion
+                   spectrum magnetic resonance imaging},
+  Journal        = {Magnetic Resonance in Medicine},
+  Volume         = {54},
+  Number         = {6},
+  Pages          = {1377--1386},
+  publisher      = {Wiley Online Library},
+  year           = 2005
 }
 
 @ARTICLE{Schmid2009,
